--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.10.7'
+          channel: 'stable'
+          # Usamos 3.10 para asegurar compatibilidad sin que falle por el parche exacto
+          flutter-version: '3.10.x'
 
       - name: Get dependencies
         run: flutter pub get
