--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          # Usamos 3.10 para asegurar compatibilidad sin que falle por el parche exacto
-          flutter-version: '3.10.x'
+          # Subimos a la 3.13.0 para que el SDK de Dart sea compatible con tu pubspec
+          flutter-version: '3.13.0'
 
       - name: Get dependencies
         run: flutter pub get
