fix: ajustar version del sdk de dart para compatibilidad con github actions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.10.7
+  # Bajamos de 3.10.7 a 3.1.0 para que coincida con el servidor de GitHub
+  sdk: ^3.1.0
 
 dependencies:
   flutter:
