--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,25 +13,25 @@ dependencies:
   cupertino_icons: ^1.0.8
   camera: ^0.11.3+1
   qr_flutter: ^4.1.0
-  device_info_plus: ^12.3.0
+  # Ajustamos device_info_plus y crypto a versiones compatibles con Dart 3.1
+  device_info_plus: ^9.0.2
+  crypto: ^3.0.3
   mobile_scanner: ^7.1.4
   path_provider: ^2.1.5
-  http: ^1.6.0
-  google_fonts: ^8.0.1
-  permission_handler: ^12.0.1
-  flutter_webrtc: ^0.12.3
-  flutter_background_service: ^5.0.12
-  crypto: ^3.0.6
-  intl: ^0.19.0
-  shared_preferences: ^2.5.2
-  video_player: ^2.8.1
-  chewie: ^1.8.1
+  http: ^1.1.0
+  google_fonts: ^5.1.0
+  permission_handler: ^11.0.1
+  flutter_webrtc: ^0.10.4
+  flutter_background_service: ^5.0.5
+  intl: ^0.18.1
+  shared_preferences: ^2.2.0
+  video_player: ^2.7.1
+  chewie: ^1.7.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
-  # Bajamos de ^6.0.0 a ^2.0.0 para que sea compatible con Dart 3.1.0
   flutter_lints: ^2.0.0
 
 flutter:
